--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,6 +216,37 @@ main li {
 	margin-top: 5%; 
 }
 
+/* projects */
+
+#project-title {
+	font-weight: 500;
+	font-size: 70px;
+	text-align: center;
+	padding-top: 5%;
+}
+
+.projectLine {
+	display: inline-block;
+	padding-left: 30%;
+	font-size: 20px;
+	width: 80%;
+}
+
+#popular {
+	padding-left: 30%;
+	padding-top: 2%;
+	display: block;
+}
+
+.projectLine a{
+	text-decoration: none;
+	color:#737373;
+	font-size: 30px;
+}
+.projectLine a:hover{
+	color: #47c8ff;
+}
+
 /* contact */
 
 #contact-title {
