updated expired fb link

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,7 +216,7 @@ main li {
 	border-radius: 300px;
 	-webkit-border-radius: 300px;
 	-moz-border-radius: 300px;
-	background: url(http://scontent.xx.fbcdn.net/hphotos-xta1/v/t1.0-9/11949395_942048579188171_1603127539139629997_n.jpg?oh=3449810be20d5cb21a88b2e8cc74a96b&oe=5697EE2A) no-repeat;
+	background: url(http://i.imgur.com/paeHAZP.jpg) no-repeat;
 	border: 10px solid white;
 	margin-left: 5%;
 	margin-right: 5%;
