--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,6 +348,7 @@ main li {
 	height: 80px;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 .bottom{
@@ -371,7 +372,15 @@ main li {
 .menu-item span:hover {
 	color: rgba(0,146,194,0.89);
 	cursor: pointer;
+}
 
+.menu-item > a, #d-home > a {
+	text-decoration: none;
+}
+
+#d-home > a:hover{
+	color: rgba(0,146,194,0.89);
+	cursor: pointer;
 }
 
 .nav-cont {
@@ -384,18 +393,9 @@ main li {
 #d-home {
 	position: absolute;
 	right: 5;
-	bottom: 0;
-}
-
-.svgd:hover {
-	cursor: pointer;
-	fill: rgba(0,146,194,0.89);
-}
-
-#d-home:hover svg path,
-#d-home:hover{
-	fill: rgba(0,146,194,0.89);
-	color: rgba(0,146,194,0.89);
+	bottom: 5;
+	font-size: 25px;
+	font-style: italic;
 }
 
 .bottom-new{
